# capd

./: .gitignore  Dockerfile-deb  Dockerfile-rpm  Makefile  README.md  VERSION  authProcess.c  authProcess.h  build.sh  capd  capd.c  capd.passwd  coreProcess.c  coreProcess.h  counterFunctions.c  counterFunctions.h  cryptoFunctions.c  cryptoFunctions.h  fixedKey.h  globalDefinitions.c  globalDefinitions.h  meson.build  mfa_program.py  my.passwd  netProcess.c  netProcess.h  openClose.sh  pkg.sh  pyproject.toml  replayFunctions.h  test.c  utilityFunctions.c  utilityFunctions.h
.docker/deb/: Dockerfile  Dockerfile-test
.docker/rpm/: Dockerfile
.github/workflows/: test.yml
debian/: capd.service  capd.spec  capd.sysuser  changelog  control  copyright  dirs  rules  sysuser
etc/: capd.toml
packaging/: Dockerfile-deb  Dockerfile-rpm  pkg_deb.sh  pkg_rpm.sh
packaging/DEBIAN/: control
packaging/RPM/: capd.spec
pytest/: test_mfa_program.py
src/: authProcess.c  authProcess.h  counterFunctions.h  globalDefinitions.c  globalDefinitions.h  meson.build  netProcess.h  parse_config.cpp  parse_config.h  replayFunctions.c  utilityFunctions.h
test/: meson.build  test.c  test_auth.c  test_globalDefinitions.c
