[tool.poetry]
name = "capd"
version = "22.3.7"
description = "mfa_program tool for programming Yubikey"
authors = [
  "Mark Meredith <mark.meredith@netl.doe.gov>",
  "Michael Prinkey <mprinkey@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.10"
pyOpenSSL = "^22.0.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
meson = "^0.61.2"
mypy = "^0.931"
ninja = "^1.10.2"
pylint = "^2.12.2"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-mypy = "^0.9.1"
types-pyOpenSSL = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "client"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pylint.master]
disable = [
    "invalid-name",
    "missing-docstring",
    "too-many-arguments",
    "too-many-branches",
    "too-many-locals",
    "too-many-statements",
]
jobs=0